--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -82,3 +82,9 @@ html, body {
   border:1px solid #4C964D;
   color:#FFF;
 }
+
+/* Lists =================== */
+
+li { 
+	list-style-type: square; 
+} 
