Main page updated as well as about me

--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -47,7 +47,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 
+        <p>&copy; Paulo Marques, 2012
         </p>
       </footer>
 
